# tuple-transmission

./: CMakeLists.txt  Doxyfile  astyle-project.sh  style-project.sh  tuple_transmission.h
generation/: ArityConfig.gen.lua  CMakeLists.txt  DeserializeOverloads.gen.lua  DeserializedOverloads.gen.lua  PartialHandlerBase.gen.lua  PartialReceiver.gen.lua  SendOverloads.gen.lua  generateAll.sh  query.lua  variadicGenerate.lua
tests/: BaseReceiveFixture.h  BaseSendReceiveFixture.h  BasicChecksum.cpp  BasicRoundtrip.cpp  CMakeLists.txt  ChecksumHandler.cpp  ChecksumReceiver.cpp  ChecksumRoundtrip.cpp  DefinePartialHandler.h  DefinePartialReceiver.h  EnvelopeReceiveBuffer.cpp  FusionCurry.cpp  Handler.cpp  HandlerCommon.h  MessageLength.cpp  OutputArray.h  PartialHandler.cpp  PartialReceiver.cpp  Protocol.h  ProtocolForTest.h  ProtocolTestSpecifics.h  Receive.cpp  ReceiveHandler.cpp  Receiver.cpp  ReceiverCommon.h  RoundtripCommon.h  Sizeof.cpp  TupleTransmission.cpp
tests/cleanbuild/: CMakeLists.txt  test_headercompile.cpp.in
tuple-transmission/: AddContextToMessageType.h  AddContextToMessageType_fwd.h  BoostArrayBuffer.h  BoostArrayBufferTransmission.h  BoundMessageType.h  BoundMessageType_fwd.h  CMakeLists.txt  ChecksumComputer.h  CreateMessage.h  EnvelopeBase.h  EnvelopeBase_fwd.h  EnvelopeBasic.h  Envelopes_fwd.h  FusionCurry.h  FusionType.h  IntegralTypes.h  MaxMessageLength.h  MessageCollection.h  MessageCollectionTypes.h  MessageCount.h  MessageCount_fwd.h  MessageIdType.h  MessageLength.h  MessageSizeType.h  MessageType.h  MessageTypeWithContext.h  MessageTypeWithContext_fwd.h  ParameterHandlerBase.h  PartialHandlerBase.h  PartialReceiver.h  Receive.h  ReceiveHandler.h  Receiver.h  Receiver_fwd.h  Send.h  SendMessage.h  Sizeof.h  Sizeof_fwd.h  Transmission.h  TransmissionBase.h  (+5 more)
tuple-transmission/detail/: ComputeReceiveBufferSize.h  ControlCodes.h  FindMessageId.h  IsIdValid.h  MaxMessageLength.h  MessageLength.h  SizeofFullEnvelope.h
tuple-transmission/detail/bases/: EnvelopeBase.h  EnvelopeBase_fwd.h  ReceiveAdapterBase.h  ReceiveAdapterBase_fwd.h  SerializerBase.h  TransmissionBase.h  TransmissionBase_fwd.h  TransmitterBase.h  TransmitterBase_fwd.h
tuple-transmission/detail/constants/: ArityConfig.h  ControlCodes.h  MessageBufferSizeScale.h
tuple-transmission/detail/operations/: ComputeFieldOffsets.h  ComputeReceiveBufferSize.h  DeserializeAndInvoke.h  DeserializeDirectly.h  DeserializeOverloads_Generated.h  DeserializeToFusion.h  IsIdValid.h  MaxMessageLength.h  MessageArity.h  MessageCount.h  MessageCount_fwd.h  MessageLength.h  SendOverloads_Generated.h  SerializedFieldSize.h  SerializedFieldSize_fwd.h  Sizeof.h  Sizeof_fwd.h
tuple-transmission/detail/types/: EnvelopeReceiveBuffer.h  IntegralTypes.h  MessageIdType.h  MessageIdType_fwd.h  MessageSizeType.h  MessageSizeType_fwd.h
tuple-transmission/envelopes/: Basic.h  BasicChecksum.h  Envelopes_fwd.h
tuple-transmission/integration/: ArduinoStreamReceiveHelper.h
tuple-transmission/receiveadapters/: ArduinoSerial.h  VrpnSerial.h
tuple-transmission/serializers/: BitwiseCopySerialization.h
tuple-transmission/transmitters/: ArduinoI2C.h  ArduinoSerial.h  AutosizedBoostArrayBuffer.h  BoostArrayBuffer.h  ChecksumComputer.h  TransmitterComposition.h  VectorBuffer.h  VrpnSerial.h
util/: BoostAssertMsg.h  MPLApplyAt.h  MPLFindIndex.h  ReceiveBuffer.h  VectorSimulator.h  booststdint.h
